<resources>
    <string name="app_name">coursework</string>
    <string name="write">Write…</string>
    <string name="log_out">Log out</string>
    <string name="users">Users…</string>
    <string name="search">Search…</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="loading_error">Loading error</string>
    <string name="try_again">try again</string>
    <string name="error_loading_messages">failed to load messages</string>
    <string name="error_loading">Error loading</string>
    <string name="error_sending_message">failed to send message</string>
    <string name="error_change_reaction">failed to change reaction</string>
    <string name="error_loading_contacts">failed to load contacts</string>
    <string name="open_topics">open topics</string>
    <string name="close_topics">close topics</string>
    <string name="avatar">avatar</string>
    <string name="error_loading_profile">failed to load profile</string>
    <string name="idle">Idle</string>
    <string name="formatted_channel_name">#%s</string>
    <string name="topic_with_name">Topic: #%s</string>
    <string name="create_new_channel">Create new channel</string>
    <string name="create">Create</string>
    <string name="channel_name_hint">Channel name</string>
    <string name="channel_description_hint">Channel description</string>
    <string name="error_create_channel">failed to create channel</string>
    <string name="empty_name_filed">The Name field cannot be empty</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="add_reaction">Add reaction</string>
    <string name="edit_message">Edit message</string>
    <string name="edit_topic">Edit topic</string>
    <string name="delete_message">Delete message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="message_text">Message text</string>
    <string name="error_change_message">Failed to change message</string>
    <string name="error_change_topic">Failed to change topic</string>
    <string name="error_delete_message">Failed to delete message</string>
    <string name="error_load_topic">Failed to load topic</string>
    <string name="error_update_data">Failed to update data</string>
    <string name="unread_message">%s mes</string>
</resources>