<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/background_500">

    <ImageView
        android:id="@+id/ic_copy"
        style="@style/DialogIcon"
        android:contentDescription="@string/copy_message_text"
        android:src="@drawable/ic_copy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copy"
        style="@style/DialogTextView"
        android:text="@string/copy_message_text"
        app:layout_constraintBottom_toBottomOf="@id/ic_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_copy"
        app:layout_constraintTop_toTopOf="@id/ic_copy" />

    <ImageView
        android:id="@+id/ic_emoji"
        style="@style/DialogIcon"
        android:contentDescription="@string/add_reaction"
        android:src="@drawable/ic_emoji"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_copy" />

    <TextView
        android:id="@+id/add_reaction"
        style="@style/DialogTextView"
        android:text="@string/add_reaction"
        app:layout_constraintBottom_toBottomOf="@id/ic_emoji"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_emoji"
        app:layout_constraintTop_toTopOf="@id/ic_emoji" />

    <ImageView
        android:id="@+id/ic_edit_message"
        style="@style/DialogIcon"
        android:contentDescription="@string/edit_message"
        android:src="@drawable/ic_edit_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_emoji" />

    <TextView
        android:id="@+id/edit_message"
        style="@style/DialogTextView"
        android:text="@string/edit_message"
        app:layout_constraintBottom_toBottomOf="@id/ic_edit_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_edit_message"
        app:layout_constraintTop_toTopOf="@id/ic_edit_message" />

    <ImageView
        android:id="@+id/ic_edit_topic"
        style="@style/DialogIcon"
        android:contentDescription="@string/edit_topic"
        android:src="@drawable/ic_edit_topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_edit_message" />

    <TextView
        android:id="@+id/edit_topic"
        style="@style/DialogTextView"
        android:text="@string/edit_topic"
        app:layout_constraintBottom_toBottomOf="@id/ic_edit_topic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_edit_topic"
        app:layout_constraintTop_toTopOf="@id/ic_edit_topic" />

    <ImageView
        android:id="@+id/ic_delete"
        style="@style/DialogIcon"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/delete_message"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_edit_topic" />

    <TextView
        android:id="@+id/delete"
        style="@style/DialogTextView"
        android:text="@string/delete_message"
        app:layout_constraintBottom_toBottomOf="@id/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ic_delete"
        app:layout_constraintTop_toTopOf="@id/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>